tests/c#/testme.cs.out
testme.cs(13,44): error CS1010: Newline in constant
testme.cs(15,12): error CS1525: Unexpected symbol `Console'
Compilation failed: 2 error(s), 0 warnings
